# aonsoku-reborn

./: .env.example  .gitignore  .npmrc  AGENTS.md  README.md  biome.json  capacitor.config.ts  cypress.config.cjs  electron.vite.config.ts  forge.config.ts  index.html  manual-chunks.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: build-android.yml  build-ios.yml  build.yml  create-tag.yml  cypress-test.yml  lint-check.yml  nightly.yml  oss.yml  release.yml  vitest.yml
android/: .gitignore  build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
capacitor-plugins/aonsoku-native-audio/: Package.swift  package.json
capacitor-plugins/aonsoku-native-bridge/: Package.swift  package.json
capacitor-plugins/aonsoku-native-data/: Package.swift  package.json
capacitor-plugins/capacitor-native/: Package.resolved  Package.swift  package.json
cypress/support/: component.tsx
docs/: android-a1-bridge-preferences-acceptance.md  offline-architecture.md
docs/native-audio-roadmap/: 00-requirements.md  01-roadmap.md  02-playback-and-queue-modularization.md  03-cache-modularization.md  04-ios-native-implementation.md  05-android-platform-plan.md  06-testing-and-commit-protocol.md  (+2 more)
public/: sw.js
src/: App.tsx  index.css  main.tsx  themes.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: desktop_audio.rs  lib.rs  macos.rs  main.rs  media.rs
(+803 files in other folders)
